--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,8 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
-	sparkfun/SparkFun TB6612FNG Motor Driver Library@^1.0.0
-	https://github.com/Startche/CHN203_ESP32#v0.0.1
-    https://github.com/Startche/PID#v0.0.1
-    madhephaestus/ESP32Encoder@^0.10.2
+	sparkfun/SparkFun TB6612FNG Motor Driver Library@1.0.0
+	https://github.com/Startche/CHN203_ESP32#cd0eeec
 
 [platformio]
 description = Controle de posição e velocidade de um motor usando a placa CH-N20-3 em conjunto com um driver TB6612FNG e um ESP32
